# scene_objects_manager

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
.github/: issue_template.md  pull_request_template.md
.github/workflows/: cpp-lint.yml  pre-commit.yml
include/scene_objects_manager/: args_parser.hpp  scene_object.hpp  scene_objects_manager.hpp  scene_objects_spawner.hpp  spawner.hpp  utils.hpp  yaml_parser.hpp
include/scene_objects_spawner/: argparse.hpp  argv_parser.hpp  object_spawner.hpp  scene_object.hpp  scene_objects_spawner.hpp  utils.hpp  yaml_parser.hpp
src/: args_parser.cpp  argv_parser.cpp  object_spawner.cpp  scene_objects_manager.cpp  scene_objects_spawner.cpp  spawner.cpp  yaml_parser.cpp
test/: config.yml
